refactor: change collect